add benchmark demo

--- a/spark/notebooks/geolake-scala-demo.ipynb
+++ b/spark/notebooks/geolake-scala-demo.ipynb
@@ -47,7 +47,7 @@
     "import org.wololo.geojson.Feature\n",
     "import org.apache.spark.sql.DataFrame\n",
     "\n",
-    "def readGeojson(filePath: String): DataFrame = {\n",
+    "def readLineOfGeojson(filePath: String): DataFrame = {\n",
     "    val colnames = Seq(\"TRIP_ID\", \"CALL_TYPE\", \"ORIGIN_STAND\", \"TAXI_ID\", \"TIMESTAMP\", \"DAY_TYPE\", \"MISSING_DATA\",  \"geometry\")\n",
     "    sc.textFile(filePath).map(line => {\n",
     "        val feature = GeoJSONFactory.create(line).asInstanceOf[Feature]\n",
@@ -118,7 +118,7 @@
    ],
    "source": [
     "val testFile = \"/home/iceberg/data/test_portotaxi.geojson\"\n",
-    "val df_test = readGeojson(testFile)\n",
+    "val df_test = readLineOfGeojson(testFile)\n",
     "df_test.createOrReplaceTempView(\"test_portotaxi\")\n",
     "df_test.show"
    ]
