fix reading data in benchmark-portotaxi.ipynb

--- a/notebooks/benchmark-portotaxi.ipynb
+++ b/notebooks/benchmark-portotaxi.ipynb
@@ -9,9 +9,63 @@
     "\n",
     "Test the writing and reading performance on GeoLake.\n",
     "\n",
-    "```shell\n",
-    "wget https://star.cs.ucr.edu/datasets/portotaxi/download.geojson.gz -O - | gzip -d > /home/iceberg/data/portotaxi.geojson\n",
-    "```"
+    "\n",
+    "We are going to use a Portaxi dataset which has 2m records. You can find it here: https://star.cs.ucr.edu/?portotaxi#center=41.1636,-8.5872&zoom=13"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba858681",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%shell\n",
+    "\n",
+    "wget https://star.cs.ucr.edu/datasets/portotaxi/download.geojson.gz -O - | gzip -d > /home/iceberg/data/portotaxi.geojson"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6fa8f676",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%shell\n",
+    "\n",
+    "ls -lh /home/iceberg/data/portotaxi.geojson"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72225b9d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%init_spark\n",
+    "\n",
+    "# The file is large(3.5G), run this cell if you have enough memory\n",
+    "\n",
+    "launcher.num_executors = 1\n",
+    "launcher.executor_cores = 8\n",
+    "launcher.driver_memory = '16g'\n",
+    "launcher.executor_memory = '16g'\n",
+    "launcher.conf.set(\"spark.driver.maxResultSize\",\"4g\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f2288962",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%shell\n",
+    "\n",
+    "# if no enough memory, you can split the file and only read the first 10k records\n",
+    "pip install geojsplit && cd /home/iceberg/data/ && geojsplit -n 1 --geometry-count 10000 portotaxi.geojson && ls -lh /home/iceberg/data/"
    ]
   },
   {
@@ -23,16 +77,28 @@
    "source": [
     "import org.wololo.geojson.GeoJSONFactory\n",
     "import org.wololo.jts2geojson.GeoJSONReader\n",
-    "import org.wololo.geojson.FeatureCollection\n",
+    "import org.wololo.geojson.Feature\n",
     "import org.apache.spark.sql.DataFrame\n",
+    "import com.fasterxml.jackson.databind.ObjectMapper\n",
+    "\n",
     "import spark.sqlContext.implicits._\n",
     "\n",
     "\n",
     "def readGeojson(filePath: String): DataFrame = {\n",
     "    val colnames = Seq(\"TRIP_ID\", \"CALL_TYPE\", \"ORIGIN_STAND\", \"TAXI_ID\", \"TIMESTAMP\", \"DAY_TYPE\", \"MISSING_DATA\",  \"geometry\")\n",
-    "    val geoJsonString = spark.read.textFile(filePath).collect()(0)  \n",
-    "    val featureColllection = GeoJSONFactory.create(geoJsonString).asInstanceOf[FeatureCollection]\n",
-    "    val rows = featureColllection.getFeatures.map(feature => {\n",
+    "    val geoJsonString = spark.read.textFile(filePath).collect().mkString\n",
+    "    val mapper = new ObjectMapper()\n",
+    "    val it = mapper.readTree(geoJsonString).get(\"features\").iterator()\n",
+    "    var features = Seq[Feature]()\n",
+    "    while (it.hasNext()) {\n",
+    "        val nextFea = it.next()\n",
+    "        try {\n",
+    "            features = features :+ GeoJSONFactory.create(nextFea.toString).asInstanceOf[Feature]\n",
+    "        } catch {\n",
+    "             case e: Exception => null\n",
+    "        }\n",
+    "    }\n",
+    "    val rows = features.map(feature => {\n",
     "        val reader = new GeoJSONReader\n",
     "        (\n",
     "    \t\tfeature.getProperties.get(\"TRIP_ID\").asInstanceOf[Long]\n",
@@ -56,8 +122,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "val fullFile = \"/home/iceberg/data/portotaxi.geojson\"\n",
-    "val df = readGeojson(fullFile).repartition(50)\n",
+    "val fullFile = \"/home/iceberg/data/portotaxi_xaaaa.geojson\" // change to \"portotaxi.geojson\" if you have enough memory\n",
+    "val df = readGeojson(fullFile).repartition(10)\n",
     "df.cache\n",
     "df.createOrReplaceTempView(\"portotaxi\")"
    ]
@@ -65,11 +131,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c60a7d9d",
+   "id": "c68e9593",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.rdd.count()"
+    "spark.sql(\"SELECT * FROM portotaxi\").count()"
    ]
   },
   {
